--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "scripts": {
         "test": "./node_modules/nodeunit/bin/nodeunit test/"
     },
+    "dependencies": {
+        "byline": "^4.1.1",
+        "ascii-table": "0.0.x"
+    },
     "devDependencies": {
         "nodeunit": "^0.9.0"
     }
